[gd_scene load_steps=7 format=2]

[ext_resource path="res://chars/kate.png" type="Texture" id=1]
[ext_resource path="res://telas/tela_01.gd" type="Script" id=2]
[ext_resource path="res://chars/john_locke.png" type="Texture" id=3]
[ext_resource path="res://chars/jack.png" type="Texture" id=4]

[sub_resource type="GradientTexture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 116, 147.5 )

[node name="tela_01" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2
script = ExtResource( 2 )

[node name="background" type="Sprite" parent="."]
position = Vector2( 513, 300 )
scale = Vector2( 0.499023, 600 )
texture = SubResource( 2 )

[node name="click_area" type="Area2D" parent="."]
position = Vector2( 121, 299 )
collision_layer = 3
collision_mask = 3

[node name="computador" type="CollisionShape2D" parent="click_area"]
position = Vector2( 90, 114 )
shape = SubResource( 1 )

[node name="jack" type="Sprite" parent="."]
position = Vector2( 231, 413 )
scale = Vector2( 0.514337, 0.569343 )
texture = ExtResource( 4 )

[node name="locke" type="Sprite" parent="."]
position = Vector2( 527, 411 )
scale = Vector2( 0.422043, 0.547445 )
texture = ExtResource( 3 )

[node name="kate" type="Sprite" parent="."]
position = Vector2( 850, 411 )
scale = Vector2( 0.381707, 0.364024 )
texture = ExtResource( 1 )

[node name="select_char" type="Label" parent="."]
margin_left = 84.0
margin_top = 29.0
margin_right = 961.0
margin_bottom = 151.0
text = "SELECT YOUR SURVIVOR"
align = 1
valign = 1

[node name="jack_label" type="Label" parent="."]
margin_left = 52.0
margin_top = 193.0
margin_right = 371.0
margin_bottom = 275.0
text = "JACK"
align = 1
valign = 1
uppercase = true

[node name="locke_label" type="Label" parent="."]
margin_left = 406.0
margin_top = 172.0
margin_right = 637.0
margin_bottom = 283.0
text = "???"
align = 1
valign = 1

[node name="kate_label" type="Label" parent="."]
margin_left = 730.0
margin_top = 183.0
margin_right = 961.0
margin_bottom = 294.0
text = "???"
align = 1
valign = 1

[connection signal="mouse_entered" from="click_area" to="." method="_on_click_area_mouse_entered"]
[connection signal="mouse_exited" from="click_area" to="." method="_on_click_area_mouse_exited"]
